Fix bug in calculate_total function in shopping_cart.py

--- a/DummyExample/GptApproach.ipynb
+++ b/DummyExample/GptApproach.ipynb
@@ -1,15 +1,17 @@
 {
  "cells": [
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": 2,
    "metadata": {},
+   "outputs": [],
    "source": [
-    "#### Array of Products Brand A"
+    "import pandas as pd"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -49,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -88,10 +90,69 @@
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": 5,
    "metadata": {},
+   "outputs": [],
    "source": [
-    "#### Clustering by KMeans"
+    "def rank_ingredients(products):\n",
+    "    for product in products:\n",
+    "        # Enumerate the ingredients and append a rank to each ingredient\n",
+    "        product['Ingredients'] = [f\"{ingredient}:{index+1}\" for index, ingredient in enumerate(product['Ingredients'])]\n",
+    "    return products\n",
+    "\n",
+    "products_brand_a = rank_ingredients(products_brand_a)\n",
+    "products_brand_b = rank_ingredients(products_brand_b)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "products:list = products_brand_a + products_brand_b"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Adjust products to include ingredient weights based on rank\n",
+    "for product in products:\n",
+    "    ingredients_with_weights = []\n",
+    "    for ingredient in product['Ingredients']:\n",
+    "        name, rank = ingredient.split(':')\n",
+    "        # Calculate the weight as the inverse of the rank\n",
+    "        weight = 1 / int(rank)\n",
+    "        # Append the ingredient name multiplied by its calculated weight\n",
+    "        ingredients_with_weights.append(f\"{name.strip()}:{weight:.2f}\")\n",
+    "    product['Ingredients'] = \", \".join(ingredients_with_weights)  # Joining ingredients and their weights for vectorization\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.feature_extraction import DictVectorizer\n",
+    "\n",
+    "# Create a list of dictionaries where each dictionary represents the weighted ingredients of a product\n",
+    "ingredient_dicts = []\n",
+    "for product in products:\n",
+    "    ingredient_dict = {}\n",
+    "    for item in product['Ingredients'].split(', '):\n",
+    "        name, weight = item.split(':')\n",
+    "        ingredient_dict[name] = float(weight)\n",
+    "    ingredient_dicts.append(ingredient_dict)\n",
+    "\n",
+    "# Vectorize the ingredient dictionaries. \n",
+    "# Generate a sparse matrix where each row represents a product and each column represents an ingredient and the values are the weights of the ingredients\n",
+    "vectorizer = DictVectorizer()\n",
+    "ingredient_vectors = vectorizer.fit_transform(ingredient_dicts)\n"
    ]
   },
   {
@@ -99,190 +160,7 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "import pandas as pd\n",
-    "from sklearn.feature_extraction.text import CountVectorizer\n",
-    "from sklearn.cluster import KMeans\n",
-    "\n",
-    "# Sample data setup (combine products from both Brand A and B)\n",
-    "products = [\n",
-    "    # Add your combined product list from both Brand A and B here\n",
-    "]\n",
-    "\n",
-    "# Extract product names and ingredients as a single string per product for vectorization\n",
-    "data = [' '.join(product[\"Ingredients\"]) for product in products]\n",
-    "product_names = [product[\"Product\"] for product in products]\n",
-    "\n",
-    "# Vectorizing the ingredients\n",
-    "vectorizer = CountVectorizer()\n",
-    "X = vectorizer.fit_transform(data)\n",
-    "\n",
-    "# Applying K-means clustering\n",
-    "kmeans = KMeans(n_clusters=5, random_state=0)  # You can adjust the number of clusters\n",
-    "kmeans.fit(X)\n",
-    "\n",
-    "# Assigning the cluster labels to each product\n",
-    "clusters = kmeans.labels_\n",
-    "\n",
-    "# Creating a DataFrame to view the products with their respective clusters\n",
-    "clustered_data = pd.DataFrame({\n",
-    "    'Product': product_names,\n",
-    "    'Cluster': clusters\n",
-    "})\n",
-    "\n",
-    "# Printing the results\n",
-    "print(clustered_data.sort_values(by='Cluster'))\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "#### Using TF-IDF and HDBSCAN"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import pandas as pd\n",
-    "from sklearn.feature_extraction.text import TfidfVectorizer\n",
-    "from sklearn.decomposition import PCA\n",
-    "import hdbscan\n",
-    "\n",
-    "# Sample data setup (combine products from both Brand A and B)\n",
-    "products = [\n",
-    "    # Add your combined product list from both Brand A and Brand B here\n",
-    "]\n",
-    "\n",
-    "# Extract product names and ingredients as a single string per product for vectorization\n",
-    "data = [' '.join(product[\"Ingredients\"]) for product in products]\n",
-    "product_names = [product[\"Product\"] for product in products]\n",
-    "\n",
-    "# Vectorizing the ingredients with TF-IDF\n",
-    "tfidf_vectorizer = TfidfVectorizer()\n",
-    "X_tfidf = tfidf_vectorizer.fit_transform(data)\n",
-    "\n",
-    "# Dimensionality Reduction with PCA\n",
-    "pca = PCA(n_components=0.95)  # Adjust the number of components to capture 95% variance\n",
-    "X_pca = pca.fit_transform(X_tfidf.toarray())\n",
-    "\n",
-    "# Clustering with HDBSCAN\n",
-    "clusterer = hdbscan.HDBSCAN(min_cluster_size=5, gen_min_span_tree=True)\n",
-    "cluster_labels = clusterer.fit_predict(X_pca)\n",
-    "\n",
-    "# Creating a DataFrame to view the products with their respective clusters\n",
-    "clustered_data = pd.DataFrame({\n",
-    "    'Product': product_names,\n",
-    "    'Cluster': cluster_labels\n",
-    "})\n",
-    "\n",
-    "# Printing the results\n",
-    "print(clustered_data.sort_values(by='Cluster'))\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Using Bertopic"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from bertopic import BERTopic\n",
-    "from sklearn.datasets import fetch_20newsgroups\n",
-    "\n",
-    "# Sample data setup (assuming 'products' is already your dataset)\n",
-    "products = [\n",
-    "    # Add your combined product list from both Brand A and Brand B here\n",
-    "]\n",
-    "\n",
-    "# Extract product names and a single string of ingredients per product for embedding\n",
-    "ingredients = [' '.join(product[\"Ingredients\"]) for product in products]\n",
-    "product_names = [product[\"Product\"] for product in products]\n",
-    "\n",
-    "# Initialize BERTopic model\n",
-    "topic_model = BERTopic(language=\"english\", calculate_probabilities=True, verbose=True)\n",
-    "\n",
-    "# Fit the model and transform the data\n",
-    "topics, probabilities = topic_model.fit_transform(ingredients)\n",
-    "\n",
-    "# Get an overview of the topics\n",
-    "topic_info = topic_model.get_topic_info()\n",
-    "\n",
-    "# Retrieve individual topics and their representative ingredients\n",
-    "for topic_num in range(len(topic_info) - 1):  # Excluding the -1 outlier topic\n",
-    "    print(f\"Topic {topic_num}: {topic_model.get_topic(topic_num)}\")\n",
-    "\n",
-    "# Mapping topics to products\n",
-    "topic_labels = [topics[idx] for idx in range(len(products))]\n",
-    "clustered_data = pd.DataFrame({\n",
-    "    'Product': product_names,\n",
-    "    'Topic': topic_labels\n",
-    "})\n",
-    "\n",
-    "print(clustered_data.sort_values(by='Topic'))\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "#### User Transformers"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from transformers import AutoTokenizer, AutoModel\n",
-    "import torch\n",
-    "from sklearn.cluster import AgglomerativeClustering\n",
-    "import pandas as pd\n",
-    "\n",
-    "# Sample data setup\n",
-    "products = [\n",
-    "    # Add your combined product list from both Brand A and Brand B here\n",
-    "]\n",
-    "\n",
-    "# Preparing the ingredients text\n",
-    "ingredients_text = [' '.join(product[\"Ingredients\"]) for product in products]\n",
-    "product_names = [product[\"Product\"] for product in products]\n",
-    "\n",
-    "# Load a pre-trained transformer model\n",
-    "tokenizer = AutoTokenizer.from_pretrained('distilbert-base-uncased')\n",
-    "model = AutoModel.from_pretrained('distilbert-base-uncased')\n",
-    "\n",
-    "# Function to encode text to embeddings\n",
-    "def get_embeddings(text):\n",
-    "    inputs = tokenizer(text, return_tensors=\"pt\", padding=True, truncation=True, max_length=512)\n",
-    "    outputs = model(**inputs)\n",
-    "    return outputs.last_hidden_state[:, 0, :].detach().numpy()\n",
-    "\n",
-    "# Convert ingredients to embeddings\n",
-    "embeddings = [get_embeddings(text) for text in ingredients_text]\n",
-    "\n",
-    "# Clustering\n",
-    "clustering_model = AgglomerativeClustering(n_clusters=5)  # Adjust the number of clusters as needed\n",
-    "cluster_labels = clustering_model.fit_predict(torch.stack(embeddings))\n",
-    "\n",
-    "# Organize the data into a DataFrame for visualization\n",
-    "clustered_data = pd.DataFrame({\n",
-    "    'Product': product_names,\n",
-    "    'Cluster': cluster_labels\n",
-    "})\n",
-    "\n",
-    "print(clustered_data.sort_values(by='Cluster'))\n"
-   ]
+   "source": []
   }
  ],
  "metadata": {
